--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ install:
 - echo "Install stage"
 - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
 - npm install cordova
+- cordova plugin add https://github.com/kadekParwanta/com-cordova-ble
 
 script:
  - echo "Starting build"
