--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
   components:
     - tools
     - platform-tools
+    - tools
     - build-tools-24.0.3
     - android-24
     - extra-android-m2repository
